style(projects): set card bg to very light turquoise; style(footer): purple gradient background

--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -222,8 +222,14 @@ $font-weight-medium: 500;
 
 .trackInfo {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
   min-width: 120px;
+}
+
+.trackText {
+  display: flex;
+  flex-direction: column;
 }
 
 .trackTitle {
