--- a/src/components/Projects.module.scss
+++ b/src/components/Projects.module.scss
@@ -288,7 +288,7 @@ $font-weight-bold: 700;
   padding: 0.4rem 0.8rem;
   border-radius: 15px;
   font-size: 0.8rem;
-  color: darkgreen;
+  color: teal;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.3px;
